# androiddeployqt-in-tree-modules

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml
subdir/: CMakeLists.txt  SubItem.qml
